refactor: 统一示例代码风格与文档规范
- 37 个中文类名改为英文命名，同步更新测试与 README 中的引用
- javacore-basics 的 DemoFiles 移入 io.github.dunwu.javacore.basics，消除与
  javacore-io 同名类的 FQCN 冲突
- 移除 14 个示例类的 @Slf4j，改用 System.out，保证示例可独立运行
- 归一 @author / @since 标签格式（136 处 / 114 文件）
- 为 38 个示例类补写经实跑验证的期望输出注释，并归一 22 处非规范标记
- 统一 javacore-jvm 的 VM Args 模板（13 处），8 个文件补齐运行参数与期望输出
- 升级 DataTypeDemoTest、ListDemoTest 中缺乏实际断言的测试
- javacore-concurrent/README 新增「示例类的入口约定（全仓通用）」章

验证：mvn clean test 全绿（18 模块 / 689 测试 / 0 失败 0 错误 0 跳过）